3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

include/player.h include/sproto.h server/c_chat.c server/player.c:
   New player command 'reply', replies to the last person who told you
   something.
server/c_wiz.c: New DM command 'teleport', lets a DM teleport next
   to target player, it is an inverse summon.
server/commands.c: Add hooks for 'reply' and 'teleport'.
mids 2002-01-16

TODO: updated with bugs, remove things that have been done and are no
  longer TODO's.
configure.in, configure: Remove lib/xpmtopix.pl file form those to be
  built, as that file has been removed.
common/object.c: Fix bug in check_walk_on which would result in spell
  objects not being properly processed - the intention is not to process
  spell objects - we should stop going up (in previous loop) when we
  get such an object, not on the way down.  This fixes directors not 
  working really well.
MSW 2001-01-13

Add the concept of overlay maps to the code.  An overlay map is a map which
is loaded on top of another map, replacing values in the header, and placing
objects on top of other objects.  This is the fundamental part of the new
weather code, but also can be used to allow dynamic editing of the worldmaps
by DM's eventually.
garbled 2002-01-01

server/spell_effect.c: fix animate_bomb so that if the bomb is in a container,
  it does not crash the server - the problem was that it was calling
  drop, which would then drop it right back into the container.  also, the
  x and y coordinates were not being properly set.
MSW 2001-12-31

This change lets the server have multiple image sets.  The client
can then request which image set to use, and the server will use