@@ -5,7 +5,7 @@
 /*
     CrossFire, A Multiplayer game for X-windows
 
-    Copyright (C) 2000 Mark Wedel
+    Copyright (C) 2001 Mark Wedel & Crossfire Development Team
     Copyright (C) 1992 Frank Tore Johansen
 
     This program is free software; you can redistribute it and/or modify
@@ -22,7 +22,7 @@
     along with this program; if not, write to the Free Software
     Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 
-    The author can be reached via e-mail to mwedel@scruz.net
+    The authors can be reached via e-mail to crossfire-devel@real-time.com
 */
 
 #include <global.h>
@@ -1869,6 +1869,8 @@ static void apply_savebed (object *player)
 #if MAP_MAXTIMEOUT 
     MAP_SWAP_TIME(player->map) = MAP_TIMEOUT(player->map);
 #endif
+    player->speed = 0;
+    update_ob_speed(player);
 }
 
 
