@@ -5,7 +5,7 @@
 /*
     CrossFire, A Multiplayer game for X-windows
 
-    Copyright (C) 2000 Mark Wedel
+    Copyright (C) 2001 Mark Wedel & Crossfire Development Team
     Copyright (C) 1992 Frank Tore Johansen
 
     This program is free software; you can redistribute it and/or modify
@@ -22,7 +22,7 @@
     along with this program; if not, write to the Free Software
     Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 
-    The author can be reached via e-mail to mwedel@scruz.net
+    The authors can be reached via e-mail to crossfire-devel@real-time.com
 */
 
 /* Initial coding: 6 Sep 1994, Nick Williams (njw@cs.city.ac.uk) */
@@ -1019,7 +1019,6 @@ int write_on_item (object *pl,char *params) {
     object *item;
     char *string=params;
     int msgtype;
-    int i;
 
     if(pl->type!=PLAYER) return 0;
     if (!params) {
